--- a/source/_posts/Net/NetCore/01.NetCore入门.md
+++ b/source/_posts/Net/NetCore/01.NetCore入门.md
@@ -16,8 +16,6 @@ summary:
 ---
 ### 认识.NET
 
-[.NET](/categories/.Net/)是一个开发平台
+[.NET](/categories/Net/)是一个开发平台
 
-[.NET](/categories/.Net/)也是 .NET Framework、[.Net Core](/categories/.Net/.Net Core/)、Xamarin/Mono 的统称。
-
-categories: [.Net,.NetCore]
+[.NET](/categories/Net/)也是 .NET Framework、[.Net Core](/categories/Net/Net Core/)、Xamarin/Mono 的统称。
