--- a/source/_posts/Net/NetCore/01.NetCore入门.md
+++ b/source/_posts/Net/NetCore/01.NetCore入门.md
@@ -1,21 +1,73 @@
 ---
 title: .NetCore入门
 author: Qanx
-id: 1
 top: false
 cover: false
 toc: true
 mathjax: false
 tags:
-  - .NetCore
+- .NetCore
 categories:
   - Net
   - NetCore
 date: 2022-11-25 12:47:40
 summary:
 ---
-### 认识.NET
+## 认识.NET
 
 [.NET](/categories/Net/)是一个开发平台
 
 [.NET](/categories/Net/)也是 .NET Framework、[.Net Core](/categories/Net/Net Core/)、Xamarin/Mono 的统称。
+
+> .Net Framework是Windows平台下进行软件开发的技术
+>
+> .Net Core是一个免费、开源、跨平台的技术，程序可以运行在Windows、Linux、Mac等操作系统下
+>
+> Xamarin/Mono是进行移动开发的技术（Xamarin、Unity），也可以做Web等跨平台开发，但是更专注于移动端
+
+C#是.NET平台下的一种编程语言。
+
+### .NET Core 对比 .NET Framework
+
+尽管绝大部分用法没有变，.NET Core 不是 .NET Framework的升级版，不能直接升级。
+
+#### .NET Framework 缺点
+
+1. 它是系统级别的安装，不同程序会互相影响
+2. 不能独立部署
+3. ASP.NET 和 IIS 深度耦合
+4. ASP.NET 资源消耗大
+5. 非云原生
+
+#### .NET Framework历史包袱
+
+1. ASP.NET MVC架构在APS.NET WebForm之上的，底层受WebForm影响
+2. ASP.NET 底层不支持很好的单元测试
+
+#### .NET Core的优点
+
+1. 支持独立部署，不互相影响
+2. 彻底模块化
+3. 没有历史包袱，运行效率高
+4. 不依赖IIS
+5. 跨平台
+6. 符合现代开发理念，有：依赖注入、单元测试等
+
+#### .NET Core的不同点
+
+.NET Core不支持包括：ASP.NET WebForms、WCF服务器端、WF、.NET Remoting、Appdomain。
+
+.NET Core支持部分 Windows-Only 的特性，但会导致程序无法跨平台：WinForm、WPF、注册表、Event Log、AD等。
+
+### Cloud Computing——云计算
+
+Microsoft Azure是全球第二大云计算厂商
+
+> .Net Core为云而生，但不止于云，不止于Azure
+
+自适应程序：有一个检查机制，可以检测到突发的访问增加趋势，然后根据需求自动购买服务器。当检测到访问降低，服务器有冗余，自动释放服务器。
+
+![image-20221204160746644](C:\Users\Qanx\AppData\Roaming\Typora\typora-user-images\image-20221204160746644.png)
+
+文章为个人学习笔记，学习自[B站 杨中科 .NET 6教程](https://www.bilibili.com/video/BV1pK41137He)
+
