--- a/source/_posts/Net/NetCore/01.NetCore入门.md
+++ b/source/_posts/Net/NetCore/01.NetCore入门.md
@@ -67,7 +67,7 @@ Microsoft Azure是全球第二大云计算厂商
 
 自适应程序：有一个检查机制，可以检测到突发的访问增加趋势，然后根据需求自动购买服务器。当检测到访问降低，服务器有冗余，自动释放服务器。
 
-![image-20221204160746644](C:\Users\Qanx\AppData\Roaming\Typora\typora-user-images\image-20221204160746644.png)
+![image-20221206173538190](C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\image-20221206173538190.png)
 
 文章为个人学习笔记，学习自[B站 杨中科 .NET 6教程](https://www.bilibili.com/video/BV1pK41137He)
 
